<resources>
    <string name="app_name">ITFetch</string>
    <string name="content_news">News</string>
    <string name="content_image_news">Image News</string>
    <string name="content_image_news_headline">Image News Headline</string>
    <string name="getting_news">Getting News…</string>
    <string name="option_search">Search</string>
    <string name="search_hint">Search your news</string>
    <string name="news_detail">News Detail</string>
    <string name="no_news_text">No news about it.</string>
    <string name="profile_detail">Developer Profile</string>
    <string name="profile_hint">Go to Developer Profile</string>
    <string name="profile_image_description">Developer Image</string>
    <string name="profile_name">Syiffa Noriza</string>
    <string name="profile_description">Student, Full-stack &amp; Android</string>
    <string name="desc_btn_github">Go to Syiffa Noriza on Github</string>
    <string name="desc_btn_linkedin">Go to Syiffa Noriza on LinkedIn</string>
</resources>