<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_profile"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_collapseMode="pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintStart_toStartOf="@id/toolbar_profile"
        app:layout_constraintTop_toBottomOf="@id/toolbar_profile">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_developer_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="20dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="98dp"
                    android:layout_height="98dp"
                    android:src="@drawable/img_pfp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/profile_image_description" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/profile_name"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:text="@string/profile_description"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp">

                    <ImageButton
                        android:id="@+id/btn_github"
                        android:padding="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_github"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/desc_btn_github"/>

                    <ImageButton
                        android:id="@+id/btn_linkedin"
                        android:padding="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_linkedin"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/desc_btn_linkedin"/>


                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>